<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <Button
       android:id="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginBottom="30dp"
       android:text="@string/button_name"
       android:backgroundTint="@color/teal_700"/>
   <SeekBar
       android:layout_width="100dp"
       android:layout_height="50dp"
      android:id="@+id/seek_bar"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="50dp"
       android:layout_marginStart="50dp"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:id="@+id/text_view"
       android:gravity="center"
      app:layout_constraintStart_toStartOf="@id/seek_bar"
      app:layout_constraintEnd_toEndOf="@id/seek_bar"
      app:layout_constraintTop_toBottomOf="@id/seek_bar"
      android:layout_marginTop="50dp"
       android:textColor="@color/teal_700"
       android:textSize="30sp"/>
   <Switch
       android:layout_width="50dp"
       android:layout_height="50dp"
      android:id="@+id/switch_view"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="50dp"
       android:layout_marginTop="50dp"/>

   <ImageView
       android:id="@+id/image_view"
       android:layout_width="30dp"
       android:layout_height="29dp"
       android:layout_marginTop="50dp"
       app:layout_constraintEnd_toEndOf="@id/switch_view"
       app:layout_constraintStart_toStartOf="@id/switch_view"
       app:layout_constraintTop_toBottomOf="@id/switch_view"
       app:srcCompat="@drawable/ic_baseline_wifi_off" />
   <CheckBox
       android:id="@+id/checkbox"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/question_text_view"
       android:textSize="15sp"
       android:textStyle="bold"
       android:text="@string/navigate"
      android:layout_marginBottom="50dp"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/question_text_view"
       android:text="@string/Question"
       android:textSize="15sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/radio_group"
       android:layout_marginBottom="30dp"
       />
   <RadioGroup
       android:id="@+id/radio_group"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/button"
      android:layout_marginBottom="30dp">
      <RadioButton
         android:id="@+id/right_answer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/RightAnswer"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wrong_answer" />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wrong_answer"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/wrong_answer"/>

   </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>